--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "5.5.1",
     "@tailwindcss/vite": "^4.0.5",
+    "@tanstack/react-query": "^5.66.0",
+    "@tanstack/react-query-devtools": "^5.66.0",
+    "antd": "5.21.6",
+    "axios": "1.7.7",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-router-dom": "6.27.0",
