--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -11,7 +11,9 @@
       "@/*": ["./src/*"],
       "assets/*": ["./src/assets/*"],
       "components/*": ["./src/components/*"],
-      "pages/*": ["./src/pages/*"]
+      "pages/*": ["./src/pages/*"],
+      "services/*": ["./src/services/*"],
+      "types/*": ["./src/types/*"]
     },
 
     /* Bundler mode */
